syntax = "proto3";

package pb;

import "targetList.proto";

option go_package = "Backend/pb";

message createTargetListRequest {
    int32 UserID = 1;
    int32 Target1ID = 2;
    int32 Target2ID = 3;
    int32 Target3ID = 4;
}

message createTargetListResponse {
    targetlist tl = 1;
}

message getTargetListRequest {
    int32 UserID = 1;
}
message getTargetListResponse {
    targetlist tl = 1;
}

message updateTargetListRequest {
    int32 UserID = 1;
    int32 Target1ID = 2;
    int32 Target2ID = 3;
    int32 Target3ID = 4;
}
message updateTargetListResponse {
    targetlist tl = 1;
}